--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Icons  -->
-    <link rel="stylesheet" href="/all.css">
+    <link rel="stylesheet" href="all.css">
     <!-- Normalize styles -->
-    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="normalize.css">
     <!-- Master Style -->
-    <link rel="stylesheet" href="/master.css">
+    <link rel="stylesheet" href="master.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
