--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Start Of Design -->
     <div class="design">
         <div class="image">
-          <img decoding="async" src="images/mobile.png" alt="Mobile" />
+          <img decoding="async" src="/SecondTemplate/images/mobile.png" alt="Mobile" />
         </div>
         <div class="text">
           <h2>Our Design Comes With...</h2>
