--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="/Images/logo.png" alt="">
+                <img src="/SecondTemplate/Images/logo.png" alt="">
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menu" ></i>
