--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Icons  -->
     <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="all.min.css">
     <!-- Normalize styles -->
     <link rel="stylesheet" href="normalize.css">
     <!-- Master Style -->
@@ -22,7 +23,7 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="/Second-Template/Images/logo.png" alt="">
+                <img src="Images/logo.png" alt="">
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menu" ></i>
@@ -123,7 +124,7 @@
     <!-- Start Of Design -->
     <div class="design">
         <div class="image">
-          <img decoding="async" src="/Second-Template/Images/mobile.png" alt="Mobile" />
+          <img decoding="async" src="Images/mobile.png" alt="Mobile" />
         </div>
         <div class="text">
           <h2>Our Design Comes With...</h2>
@@ -159,56 +160,56 @@
       <!-- container will be used here only for heading and shuffle list. -->
       <div class="imgs-container">
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-01.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-01.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-06.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-06.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-03.jpg" alt="" />
+          <img decoding="async" src=Images/shuffle-03.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-04.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-04.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-05.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-05.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-06.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-06.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-07.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-07.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img decoding="async" src="/Second-Template/Images/shuffle-08.jpg" alt="" />
+          <img decoding="async" src="Images/shuffle-08.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -223,7 +224,7 @@
     <!-- Start of Video -->
     <div class="video">
         <video autoplay muted loop>
-          <source src="/Second-Template/Images/telepoorte_fnl.mp4" type="video/mp4" />
+          <source src="Images/telepoorte_fnl.mp4" type="video/mp4" />
         </video>
         <div class="text">
           <h2>Super Awesome Video Here</h2>
@@ -244,7 +245,7 @@
                   tincidunt.
                 </p>
             </div>
-              <img decoding="async" src="/Second-Template/Images/about.png" alt="" />
+              <img decoding="async" src="/Images/about.png" alt="" />
         </div>
     </div>
           <!-- End Of About -->
@@ -285,7 +286,7 @@
           tincidunt.
         </p>
         <div class="content">
-          <img decoding="async" src="/Second-Template/Images/skills-01.jpg" alt="" />
+          <img decoding="async" src="Images/skills-01.jpg" alt="" />
           <div class="text">
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.
@@ -293,7 +294,7 @@
           </div>
         </div>
         <div class="content">
-          <img decoding="async" src="/Second-Template/Images/skills-02.jpg" alt="" />
+          <img decoding="async" src="Images/skills-02.jpg" alt="" />
           <div class="text">
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.
@@ -480,7 +481,7 @@
       <!-- Start Footer -->
       <div class="footer">
         <div class="container">
-          <img decoding="async" src="/Second-Template/Images/logo.png" alt="Logo" />
+          <img decoding="async" src="Images/logo.png" alt="Logo" />
           <p>We Are Social</p>
           <div class="social-icons">
             <i class="fab fa-facebook-f"></i>
