--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#Contact">Contact</a></li>
                  </ul>
                     <div class="form">
-                        <i class="fas fa-search"></i>
+                        <i class="fa fa-search"></i>
                     </div>
             </nav>
             
@@ -56,8 +56,8 @@
             </div>
         </div>
         
-        <i class="fas fa-angle-left change-background "></i>
-        <i class="fas fa-angle-right change-background "></i>
+        <i class="fa fa-angle-left change-background "></i>
+        <i class="fa fa-angle-right change-background "></i>
         <ul class="bullets">
             <li></li>
             <li class="active"></li>
@@ -78,7 +78,7 @@
           </div>
           <div class="services-container">
             <div class="srv-box">
-              <i class="fas fa-desktop fa-3x"></i>
+              <i class="fa fa-desktop fa-3x"></i>
               <div class="text">
                 <h3>Vorem amet intuitive</h3>
                 <p>
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="srv-box">
-              <i class="fas fa-cog fa-3x"></i>
+              <i class="fa fa-cog fa-3x"></i>
               <div class="text">
                 <h3>Vorem amet intuitive</h3>
                 <p>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="srv-box">
-              <i class="fas fa-pencil-ruler fa-3x"></i>
+              <i class="fa fa-pencil-ruler fa-3x"></i>
               <div class="text">
                 <h3>Vorem amet intuitive</h3>
                 <p>
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="srv-box">
-              <i class="fas fa-camera fa-3x"></i>
+              <i class="fa fa-camera fa-3x"></i>
               <div class="text">
                 <h3>Vorem amet intuitive</h3>
                 <p>
@@ -254,22 +254,22 @@
   <div class="stats">
     <div class="container">
       <div class="box">
-        <i class="fas fa-mug-hot"></i>
+        <i class="fa fa-mug-hot"></i>
         <div class="number">1.236</div>
         <p>Coffee Drinks</p>
       </div>
       <div class="box">
-        <i class="far fa-folder"></i>
+        <i class="fa fa-folder"></i>
         <div class="number">256</div>
         <p>Completed Projects</p>
       </div>
       <div class="box">
-        <i class="far fa-envelope"></i>
+        <i class="fa fa-envelope"></i>
         <div class="number">1,743</div>
         <p>Mail Sent</p>
       </div>
       <div class="box">
-        <i class="fas fa-trophy"></i>
+        <i class="fa fa-trophy"></i>
         <div class="number">17</div>
         <p>Awards Received</p>
       </div>
@@ -436,7 +436,7 @@
     <div class="subscribe">
         <div class="container">
           <form action="">
-            <i class="far fa-envelope fa-lg"></i>
+            <i class="fa fa-envelope fa-lg"></i>
             <input type="email" name="mail" placeholder="Your Email" />
             <input type="submit" value="Subscribe" />
           </form>
@@ -485,10 +485,10 @@
           <img decoding="async" src="Images/logo.png" alt="Logo" />
           <p>We Are Social</p>
           <div class="social-icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fas fa-home"></i>
-            <i class="fab fa-linkedin"></i>
+            <i class="fa fa-facebook-f"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-home"></i>
+            <i class="fa fa-linkedin"></i>
           </div>
           <p class="copyright">&copy; 2023 <span>Kasper</span> All Right Reserved</p>
         </div>
