--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="Images/logo.png" alt="">
             </a>
             <nav>
-                <i class="fas fa-bars toggle-menu" ></i>
+                <i class="fa fa-bars toggle-menu" ></i>
                 <ul>
                     <li><a href="#Home" class="active">Home</a></li>
                     <li><a href="#Services">Services</a></li>
@@ -254,7 +254,7 @@
   <div class="stats">
     <div class="container">
       <div class="box">
-        <i class="fa fa-mug-hot"></i>
+        <i class="fa fa-trophyt"></i>
         <div class="number">1.236</div>
         <p>Coffee Drinks</p>
       </div>
@@ -485,7 +485,7 @@
           <img decoding="async" src="Images/logo.png" alt="Logo" />
           <p>We Are Social</p>
           <div class="social-icons">
-            <i class="fa fa-facebook-f"></i>
+            <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-home"></i>
             <i class="fa fa-linkedin"></i>
