--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
         <div class="text">
           <h2>Our Design Comes With...</h2>
           <ul>
-            <li>Responsive Design</li>
-            <li>Modern And Clean Design</li>
-            <li>Clean Code</li>
-            <li>Browser Friendly</li>
+             <li> <i class="fa fa-regular fa-face-smile"></i>   Responsive Design</li>
+            <li> <i class="fa fa-regular fa-face-smile"> </i>Modern And Clean Design</li>
+            <li> <i class="fa fa-regular fa-face-smile"> </i>Clean Code</li>
+            <li> <i class="fa fa-regular fa-face-smile"> </i>Browser Friendly</li>
           </ul>
         </div>
       </div>
