--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="srv-box">
-              <i class="fa fa-pencil-ruler fa-3x"></i>
+              <i class="fa fa-pencil fa-3x"></i>
               <div class="text">
                 <h3>Vorem amet intuitive</h3>
                 <p>
@@ -254,7 +254,7 @@
   <div class="stats">
     <div class="container">
       <div class="box">
-        <i class="fa fa-trophyt"></i>
+        <i class="fa fa-trophy"></i>
         <div class="number">1.236</div>
         <p>Coffee Drinks</p>
       </div>
